[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Enemy_RigidBody2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://Splash_CanvasLayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/music/background.ogg" type="AudioStream" id=6]

[node name="Main_Node" type="Node"]
script = ExtResource( 3 )
Enemy = ExtResource( 4 )

[node name="Background_Node2D" parent="." instance=ExtResource( 2 )]

[node name="StartPosition_Position2D" type="Position2D" parent="."]
position = Vector2( 100, 565 )
scale = Vector2( 1e-05, 1 )

[node name="Player_Area2D" parent="." instance=ExtResource( 1 )]

[node name="Enemy_Timer" type="Timer" parent="."]

[node name="Speed_Timer" type="Timer" parent="."]

[node name="Splash_CanvasLayer" parent="." instance=ExtResource( 5 )]

[node name="Score_Timer" type="Timer" parent="."]

[node name="Back_AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="body_entered" from="Player_Area2D" to="Player_Area2D" method="_on_Player_Area2D_body_entered"]
[connection signal="hit" from="Player_Area2D" to="." method="_on_Player_Area2D_hit"]
[connection signal="timeout" from="Enemy_Timer" to="." method="_on_Enemy_Timer_timeout"]
[connection signal="timeout" from="Speed_Timer" to="." method="_on_Speed_Timer_timeout"]
[connection signal="start_game" from="Splash_CanvasLayer" to="." method="_on_Splash_CanvasLayer_start_game"]
[connection signal="timeout" from="Score_Timer" to="." method="_on_Score_Timer_timeout"]
